feat: add mail sender and lombok for java annotations, upgrade to 3.2.5 springboot version

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.4</version>
+		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>cz.cvut.fit.sabirdan</groupId>
 	<artifactId>wework</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>WeWork</name>
-	<description>Demo project for Spring Boot</description>
+	<description>WeWork is a user-friendly Project Manager application</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -50,6 +50,15 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 	</dependencies>
 
