--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   error:
     include-message: always
     include-binding-errors: always
+#  ssl:
+#    key-store: keystore.p12
+#    key-store-password: ...
+#    key-store-type: PKCS12
+#    key-alias: tomcat
 
 spring:
   datasource:
