--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "swr": "^2.2.5",
     "tabler-icons-react": "^1.56.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^4.9.5",
