feat: project list, project layout, project details, project members, project invitations, invite, edit

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -31,3 +31,10 @@ application:
       name: superadmin
     user:
       name: user
+  member-role:
+    owner:
+      name: owner
+    admin:
+      name: admin
+    member:
+      name: member
