--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-custom": "rm -rf ../backend/src/main/resources/static && react-scripts build && mv build ../backend/src/main/resources/static",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
