--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "swr": "^2.2.5",
     "tabler-icons-react": "^1.56.0",
     "tailwindcss": "^3.4.3",
@@ -56,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-transition-group": "^4.4.10"
   }
 }
